--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,13 +2,14 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #000000
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
-$body-color: #333
-$black: #2b2523
+$body-color: #2b2523
+$black: #16dceb33
+$dark: #000000
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -57,14 +58,14 @@ $black: #2b2523
     font-size: 18px
     font-size: 1rem
     line-height: 1.25
-    background-color: #fff
+    background-color: rgb(0, 255, 255)
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #000000
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px rgb(0, 255, 255)
+    box-shadow: inset 0 0 0 2px rgb(0, 255, 255)
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -81,12 +82,13 @@ $black: #2b2523
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
+  color: black
   padding: 3rem 0rem 0rem
   background-color: transparent
 
 //Menu overrides
-$menu-item-color: $white-ter
-$menu-item-hover-color: $black !important
+$menu-item-color: $dark
+$menu-item-hover-color: $dark !important
 $menu-item-hover-background-color: $black
 $menu-item-active-color: $kaldi-red-invert
 $menu-item-active-background-color:	$kaldi-red-invert
@@ -114,7 +116,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #16dceb33;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
