changed navbar and headers

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -14,6 +14,10 @@ $dark: #000000
 .navbar .navbar-menu
   box-shadow:none !important
 
+.nav-button
+  border-style: solid
+  margin: 5px
+  
 .content .taglist
   list-style: none
   margin-bottom: 0
@@ -98,10 +102,10 @@ $menu-label-color: $white-ter
 
 .menu-label
   font-size: 1em !important
-  text-align: left
+  text-align: center
 .menu-list
   list-style: none !important
-  text-align: left
+  text-align: center
 .social
   padding: 2em
 .social a
